# hipCUB

./: .clang-format  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  LICENSE.txt  NOTICES.txt  README.md  install  patch.patch  rmake.py  rtest.py  rtest.xml  toolchain-linux.cmake  toolchain-windows.cmake
benchmark/: CMakeLists.txt  benchmark_block_adjacent_difference.cpp  benchmark_block_discontinuity.cpp  benchmark_block_exchange.cpp  benchmark_block_histogram.cpp  benchmark_block_merge_sort.cpp  benchmark_block_radix_rank.cpp  benchmark_block_radix_sort.cpp  benchmark_block_reduce.cpp  benchmark_block_run_length_decode.cpp  benchmark_block_scan.cpp  benchmark_block_shuffle.cpp  benchmark_device_adjacent_difference.cpp  benchmark_device_batch_copy.cpp  benchmark_device_batch_memcpy.cpp  benchmark_device_for.cpp  benchmark_device_histogram.cpp  benchmark_device_memory.cpp  benchmark_device_merge_sort.cpp  benchmark_device_partition.cpp  benchmark_device_radix_sort.cpp  benchmark_device_reduce.cpp  benchmark_device_reduce_by_key.cpp  benchmark_device_run_length_encode.cpp  benchmark_device_scan.cpp  benchmark_device_segmented_radix_sort.cpp  benchmark_device_segmented_reduce.cpp  benchmark_device_segmented_sort.cpp  benchmark_device_select.cpp  benchmark_device_spmv.cpp  benchmark_utils.hpp  benchmark_warp_exchange.cpp  benchmark_warp_load.cpp  benchmark_warp_merge_sort.cpp  benchmark_warp_reduce.cpp  benchmark_warp_scan.cpp  benchmark_warp_store.cpp  cmdparser.hpp  common_benchmark_header.hpp
examples/: CMakeLists.txt  example_utils.hpp
examples/block/: CMakeLists.txt  example_block_radix_sort.cu  example_block_reduce.cu  example_block_scan.cu
examples/device/: CMakeLists.txt  example_device_partition_flagged.cpp  example_device_partition_if.cpp  example_device_radix_sort.cpp  example_device_reduce.cpp  example_device_scan.cpp  example_device_select_flagged.cpp  example_device_select_if.cpp  example_device_select_unique.cpp  example_device_sort_find_non_trivial_runs.cpp
hipcub/: CMakeLists.txt
hipcub/include/hipcub/: config.hpp  hipcub.hpp  hipcub_ext.cuh  hipcub_ext.hpp  hipcub_version.hpp.in  single_pass_scan_operators.cuh  single_pass_scan_operators.hpp  thread_load.hpp  tuple.hpp  util_allocator.hpp  util_deprecated.hpp  util_device.hpp  util_ptx.hpp  util_type.hpp
hipcub/include/hipcub/backend/cub/: hipcub.hpp  tuple.hpp  util_allocator.hpp  util_type.hpp
hipcub/include/hipcub/backend/rocprim/: hipcub.hpp  tuple.hpp  util_allocator.hpp  util_math.hpp  util_ptx.hpp  util_sync.hpp  util_type.hpp
hipcub/include/hipcub/block/: block_adjacent_difference.hpp  block_discontinuity.hpp  block_exchange.hpp  block_histogram.hpp  block_load.hpp  block_merge_sort.hpp  block_radix_rank.hpp  block_radix_sort.hpp  block_raking_layout.hpp  block_reduce.hpp  block_run_length_decode.hpp  block_scan.hpp  block_shuffle.hpp  block_store.hpp  radix_rank_sort_operations.hpp
hipcub/include/hipcub/cub/: hipcub.hpp  util_allocator.hpp
hipcub/include/hipcub/cub/device/: device_histogram.hpp  device_radix_sort.hpp  device_reduce.hpp  device_run_length_encode.hpp  device_scan.hpp  device_segmented_radix_sort.hpp  device_segmented_reduce.hpp  device_select.hpp
hipcub/include/hipcub/device/: device_adjacent_difference.hpp  device_copy.hpp  device_for.hpp  device_histogram.hpp  device_memcpy.hpp  device_merge_sort.hpp  device_partition.hpp  device_radix_sort.hpp  device_reduce.hpp  device_run_length_encode.hpp  device_scan.hpp  device_segmented_radix_sort.hpp  device_segmented_reduce.hpp  device_segmented_sort.hpp  device_select.hpp  device_spmv.hpp
hipcub/include/hipcub/grid/: grid_barrier.hpp  grid_even_share.hpp  grid_mapping.hpp  grid_queue.hpp
hipcub/include/hipcub/iterator/: arg_index_input_iterator.hpp  cache_modified_input_iterator.hpp  cache_modified_output_iterator.hpp  constant_input_iterator.hpp  counting_input_iterator.hpp  discard_output_iterator.hpp  tex_obj_input_iterator.hpp  tex_ref_input_iterator.hpp  transform_input_iterator.hpp
hipcub/include/hipcub/rocprim/: hipcub.hpp  util_allocator.hpp  util_ptx.hpp  util_type.hpp
hipcub/include/hipcub/rocprim/warp/: warp_scan.hpp  (+1 more)
hipcub/include/hipcub/thread/: thread_load.hpp  thread_operators.hpp  thread_reduce.hpp  thread_scan.hpp  thread_search.hpp  thread_sort.hpp  thread_store.hpp
hipcub/include/hipcub/warp/: warp_exchange.hpp  warp_load.hpp  warp_merge_sort.hpp  warp_reduce.hpp  warp_scan.hpp  warp_store.hpp
test/extra/: CMakeLists.txt  test_hipcub_package.cpp  test_rocprim_package.cpp
test/hipcub/: CMakeLists.txt  bfloat16.hpp  common_test_header.hpp  half.hpp  identity_iterator.hpp  single_index_iterator.hpp  test_hipcub_basic.cpp  test_hipcub_block_adjacent_difference.cpp  test_hipcub_block_discontinuity.cpp  test_hipcub_block_exchange.cpp  test_hipcub_block_histogram.cpp  test_hipcub_block_load_store.cpp  test_hipcub_block_load_store.hpp  test_hipcub_block_load_store.kernels.hpp  test_hipcub_block_merge_sort.cpp  test_hipcub_block_radix_rank.cpp  test_hipcub_block_radix_sort.cpp  test_hipcub_block_reduce.cpp  test_hipcub_block_run_length_decode.cpp  test_hipcub_block_scan.cpp  test_hipcub_block_shuffle.cpp  test_hipcub_caching_device_allocator.cpp  test_hipcub_device_adjacent_difference.cpp  test_hipcub_device_copy.cpp  test_hipcub_device_for.cpp  test_hipcub_device_histogram.cpp  test_hipcub_device_memcpy.cpp  test_hipcub_device_merge_sort.cpp  test_hipcub_device_partition.cpp  test_hipcub_device_radix_sort.cpp  test_hipcub_device_radix_sort.cpp.in  test_hipcub_device_radix_sort.hpp  test_hipcub_device_radix_sort.sortkeys.cpp  test_hipcub_device_radix_sort.sortkeysbuffer.cpp  test_hipcub_device_radix_sort.sortkeysover4g.cpp  test_hipcub_device_radix_sort.sortpairs.cpp  test_hipcub_device_radix_sort.sortpairsbuffer.cpp  test_hipcub_device_radix_sort_floats.cpp  test_hipcub_device_radix_sort_special.cpp  test_hipcub_device_reduce.cpp  (+47 more)
test/hipcub/detail/: get_hipcub_version.cpp  get_hipcub_version.hpp
test/hipcub/experimental/: sparse_matrix.hpp
(+159 files in other folders)
